Fix T103614: crash during geometry nodes evaluation with tbb disabled